<resources>
    <string name="app_name">Acute stress monitoring</string>
    <string name="accel">Accelerometers</string>
    <string name="accel_x">x:</string>
    <string name="accel_y">y:</string>
    <string name="accel_z">z:</string>
    <string name="bvp_label">BVP</string>
    <string name="eda_label">EDA</string>
    <string name="ibi_label">IBI</string>
    <string name="emptyText">-</string>
    <string name="temp_label">Temperature</string>
    <string name="battery_label">Battery</string>
    <string name="stress_status">Stress Status</string>
    <string name="device_name">Demo mode</string>
    <string name="button_start">Start</string>
    <string name="button_settings">Settings</string>
    <string name="alarm_history">Session History</string>
    <string name="settings">Settings</string>
    <string name="reset_alarm_data">Reset alarm Data</string>
    <string name="show_eda">Show EDA</string>
    <string name="show_bvp">Show BVP</string>
    <string name="demo_mode">Demo mode</string>
</resources>